# agents

./: .env.example  .gitignore  AGENTS.md  README.md
.github/llmaw/: flows.yml
.github/workflows/: llm-workflows.yml  setup-labels.yml
loops/: end-day.md  end-month.md  end-week.md  improve-codebase.md  start-day.md  start-month.md  start-week.md
repositories/: README.md
scripts/: quick-pr-review  quick-pr-reviews  sdlc-status.py
skills/address-pr-comments/: SKILL.md
skills/adr/: SKILL.md
skills/analyze-git-churn/: SKILL.md
skills/architect/: SKILL.md
skills/article-writer/: SKILL.md
skills/arxiv-article/: SKILL.md
skills/arxiv-catchup/: SKILL.md
skills/assess-needs/: SKILL.md
skills/audit-attention/: SKILL.md
skills/audit-dependencies/: SKILL.md
skills/audit-observability/: SKILL.md
skills/audit-sdlc/: SKILL.md
skills/audit-security/: SKILL.md
skills/automate-session/: SKILL.md
skills/backpropagate-sdlc/: SKILL.md
skills/bootstrap-sdlc/: SKILL.md  skill.md
skills/check-duplicates/: SKILL.md
skills/check-linked-pr/: SKILL.md
skills/compare-skills/: SKILL.md
skills/complexity-hotspots/: SKILL.md
skills/configure-labels/: SKILL.md
skills/coverage-gaps/: SKILL.md
skills/create-article/: SKILL.md
skills/create-assumption/: SKILL.md
skills/create-goals/: SKILL.md
task-stack/: config.go  go.mod  go.sum  hotkey.go  hotkey_darwin.go  hotkey_other.go  hotkey_windows.go  icon.go  main.go  pyproject.toml  settings.go  stack.go  tray.go  window.go
task-stack/src/task_stack/: __main__.py  app.py  icon.py  stack.py  window.py
(+233 files in other folders)
